# My-Projects

./: ceai.txt  main.py
C++/Proiect_apartamente/: Apartament.cpp  Apartament.h  CMakeLists.txt  ReadMe  RepoSTL.cpp  RepoSTL.h  Service.cpp  Service.h  UI.cpp  UI.h  main.cpp  testeApartamente.cpp  testeApartamente.h
Java/Laborator4/: ReadMe
Java/Laborator4/Tests/Domain/: InchiriereTest.java  TipInchiriereTest.java
Java/Proiect_cumparaturi/: pom.xml
Java/Proiect_cumparaturi/Resources/: BazaDeDate.db  settings.properties
Laborator4/: SQLRepositoryInchiriere.java  pom.xml
Laborator4/Resources/: settings.properties
Laborator4/Tests/Domain/: MasinaTest.java  TipMasinaTest.java
Laborator4/Tests/Repo/: GenericRepositoryTest.java
Python/Proiect_cafele/: ReadMe  cafele.txt  main.py
Python/Proiect_cafele/UI/: ui.py
Python/Proiect_cafele/domain/: cafele.py
Python/Proiect_cafele/exceptii/: erori.py
Python/Proiect_cafele/repository/: cafele_repo.py
Python/Proiect_cafele/service/: cafele_service.py
Python/Proiect_cafele/teste/: teste.py
Python/Proiect_cafele/validari/: validator_cafea.py
Python/Proiect_ceaiuri/: ReadMe  ceai.txt  main.py
Python/Proiect_ceaiuri/UI/: ui.py
Python/Proiect_ceaiuri/domain/: ceai.py
Python/Proiect_ceaiuri/repository/: ceai_repo.py
Python/Proiect_ceaiuri/service/: ceai_serv.py
Python/Proiect_ceaiuri/validator/: ceai_val.py
UI/: ui.py
a1-mara5012/: README.md
a1-mara5012/src/: Main.java
domain/: ceai.py
exceptii/: erori.py
repository/: ceai_repo.py
service/: ceai_serv.py
validator/: ceai_val.py
(+36 files in other folders)
